# slambook2

./: .gitignore
ch12/dense_mono/: CMakeLists.txt  dense_mapping.cpp
ch6/: CMakeLists.txt  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp  gaussNewtonMatrix.cxx
ch6/include/: MatJoint.h
ch6/src/: MatJoint.cc
ch7/: CMakeLists.txt  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp
ch9/: CMakeLists.txt  SnavelyReprojectionError.h  bundle_adjustment_ceres.cpp  bundle_adjustment_g2o.cpp  common.cpp
